docs/api/0.2.0/ironwood/nio/file/Files.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../../README.md) / [`ironwood.nio.file`](package-summary.md)

# Files

**Class** · `ironwood.nio.file.Files`

```java
public final class Files
```


## Member summary

[Methods](#methods)

| Member | Description |
| --- | --- |
| [`newInputStream(Path)`](#member-newInputStream-28-Path-29-) |  |
| [`newOutputStream(Path)`](#member-newOutputStream-28-Path-29-) |  |
| [`newBufferedReader(Path)`](#member-newBufferedReader-28-Path-29-) |  |
| [`newBufferedWriter(Path)`](#member-newBufferedWriter-28-Path-29-) |  |
| [`readAllBytes(Path)`](#member-readAllBytes-28-Path-29-) |  |
| [`readString(Path)`](#member-readString-28-Path-29-) |  |
| [`write(Path,byte[])`](#member-write-28-Path-2c-byte-5b--5d--29-) |  |
| [`writeString(Path,CharSequence)`](#member-writeString-28-Path-2c-CharSequence-29-) |  |
| [`delete(Path)`](#member-delete-28-Path-29-) |  |
| [`createDirectories(Path)`](#member-createDirectories-28-Path-29-) |  |
| [`copy(Path,Path)`](#member-copy-28-Path-2c-Path-29-) |  |
| [`move(Path,Path)`](#member-move-28-Path-2c-Path-29-) |  |
| [`readAllLines(Path)`](#member-readAllLines-28-Path-29-) | Returns Ironwood's concrete list type because a Java Collections facade is deliberately outside the standard-library architecture. |
| [`isSameFile(Path,Path)`](#member-isSameFile-28-Path-2c-Path-29-) |  |
| [`exists(Path)`](#member-exists-28-Path-29-) |  |
| [`isRegularFile(Path)`](#member-isRegularFile-28-Path-29-) |  |
| [`isDirectory(Path)`](#member-isDirectory-28-Path-29-) |  |
| [`size(Path)`](#member-size-28-Path-29-) |  |

## Methods

<a name="member-newInputStream-28-Path-29-"></a>

### `newInputStream(Path)`

```java
public static InputStream newInputStream(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-newOutputStream-28-Path-29-"></a>

### `newOutputStream(Path)`

```java
public static OutputStream newOutputStream(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-newBufferedReader-28-Path-29-"></a>

### `newBufferedReader(Path)`

```java
public static BufferedReader newBufferedReader(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-newBufferedWriter-28-Path-29-"></a>

### `newBufferedWriter(Path)`

```java
public static BufferedWriter newBufferedWriter(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-readAllBytes-28-Path-29-"></a>

### `readAllBytes(Path)`

```java
public static byte[] readAllBytes(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-readString-28-Path-29-"></a>

### `readString(Path)`

```java
public static String readString(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-write-28-Path-2c-byte-5b--5d--29-"></a>

### `write(Path,byte[])`

```java
public static Path write(Path path, byte[] bytes) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-writeString-28-Path-2c-CharSequence-29-"></a>

### `writeString(Path,CharSequence)`

```java
public static Path writeString(Path path, CharSequence content) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-delete-28-Path-29-"></a>

### `delete(Path)`

```java
public static void delete(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-createDirectories-28-Path-29-"></a>

### `createDirectories(Path)`

```java
public static Path createDirectories(Path path) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-copy-28-Path-2c-Path-29-"></a>

### `copy(Path,Path)`

```java
public static Path copy(Path source, Path target) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-move-28-Path-2c-Path-29-"></a>

### `move(Path,Path)`

```java
public static Path move(Path source, Path target) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-readAllLines-28-Path-29-"></a>

### `readAllLines(Path)`

```java
public static ArrayList<String> readAllLines(Path path) throws IOException
```

Returns Ironwood's concrete list type because a Java Collections facade
is deliberately outside the standard-library architecture.


[Back to member summary](#member-summary)

<a name="member-isSameFile-28-Path-2c-Path-29-"></a>

### `isSameFile(Path,Path)`

```java
public static boolean isSameFile(Path first, Path second) throws IOException
```


[Back to member summary](#member-summary)

<a name="member-exists-28-Path-29-"></a>

### `exists(Path)`

```java
public static boolean exists(Path path)
```


[Back to member summary](#member-summary)

<a name="member-isRegularFile-28-Path-29-"></a>

### `isRegularFile(Path)`

```java
public static boolean isRegularFile(Path path)
```


[Back to member summary](#member-summary)

<a name="member-isDirectory-28-Path-29-"></a>

### `isDirectory(Path)`

```java
public static boolean isDirectory(Path path)
```


[Back to member summary](#member-summary)

<a name="member-size-28-Path-29-"></a>

### `size(Path)`

```java
public static long size(Path path) throws IOException
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
